# panowan-web-ui

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  ENVIRONMENT.md  LICENSE.md  Makefile  PRODUCT.md  README.md  docker-compose-dev.yml  docker-compose.yml  handler.py  pyproject.toml  test_input.json
.serena/: project.yml
app/: __init__.py  api.py  api_service.py  cancellation.py  generator.py  main.py  paths.py  process_runner.py  result_views.py  runtime_host.py  runtime_host_registration.py  settings.py  sse.py  upscale_contract.py  upscaler.py  worker_runtime.py  worker_service.py
docs/: product-runtime.md  runtime-architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
requests/: generate-request.sample.json
scripts/: check-runtime.sh  data-sync.sh  docker-proxy.sh  doctor.sh  download-models.sh  generate.sh  health.sh  model-setup.sh  prefetch-models.sh  start-api.sh  start-local.sh  start-worker.sh
tests/: test_api.py  test_api_service.py  test_backend_pipeline.py  test_backend_spec.py  test_backends_cli.py  test_compose.py  test_dockerfile.py  test_engines.py  test_env_example.py  test_frontend_config.py  test_generator.py  test_job_lifecycle.py  test_jobs.py  test_makefile.py  test_model_backends.py  test_model_providers.py  test_models.py  test_panowan_runtime_adapter.py  test_panowan_runtime_provider.py  test_process_runner.py  test_runtime_host.py  test_runtime_host_registration.py  test_scripts.py  test_settings.py  test_sse.py  test_static_ui.py  (+3 more)
(+113 files in other folders)
