[project]
name = "panowan-worker"
version = "0.1.0"
description = "Engine-oriented video generation product runtime"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
