[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panowan-worker"
version = "0.1.0"
description = "Engine-oriented video generation product runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
host-runtime = [
    "accelerate",
    "diffusers",
    "einops",
    "ffmpeg-python",
    "ftfy",
    "imageio",
    "imageio-ffmpeg",
    "modelscope",
    "opencv-python-headless",
    "pandas",
    "Pillow",
    "regex",
    "torch",
    "torchvision",
    "transformers",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
